--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Insert your Google API credentials -->
 <script>
-  const API_KEY = 'AIzaSyBsr1jRZElMibwMiRMek8Z3d204-7uF254';
+  const API_KEY = '__GOOGLE_API_KEY__';
   const CLIENT_ID = '898010171923-45uc2mbusq1r3p845tl0au0h95lc9r7s.apps.googleusercontent.com';
   const SCOPES = 'https://www.googleapis.com/auth/classroom.coursework.me https://www.googleapis.com/auth/drive.file';
 </script>
