--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- Insert your Google API credentials -->
-<script>
-  const API_KEY = 'AIzaSyBsr1jRZElMibwMiRMek8Z3d204-7uF254';
-  const CLIENT_ID = '898010171923-45uc2mbusq1r3p845tl0au0h95lc9r7s.apps.googleusercontent.com';
-  const SCOPES = 'https://www.googleapis.com/auth/classroom.coursework.me https://www.googleapis.com/auth/drive.file';
-</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -91,6 +85,12 @@
 </head>
 <body>
 
+<script>
+  const API_KEY = 'AIzaSyBsr1jRZElMibwMiRMek8Z3d204-7uF254';
+  const CLIENT_ID = '898010171923-45uc2mbusq1r3p845tl0au0h95lc9r7s.apps.googleusercontent.com';
+  const SCOPES = 'https://www.googleapis.com/auth/classroom.coursework.me https://www.googleapis.com/auth/drive.file';
+</script>
+
 <div class="neon-box" id="neonBox">
   <h1>Sing and Record</h1>
   <canvas id="neonCanvas" width="400" height="150"></canvas>
@@ -119,18 +119,20 @@
 <audio id="backingTrack" controls></audio>
 
 <div>
+  <input type="text" id="filenameInput" placeholder="Enter filename...">
   <button onclick="startRecording()">Record</button>
   <button onclick="stopRecording()">Stop</button>
   <audio id="recordedAudio" controls></audio>
   <button id="downloadBtn" onclick="downloadRecording()">Download</button>
-  <button onclick="submitToClassroom(document.getElementById('downloadBtn').dataset.blob, 'recording-' + new Date().toISOString().split('T')[0] + '.webm')">Submit to Classroom</button>
-  <button onclick="uploadToDrive(document.getElementById('downloadBtn').dataset.blob, 'recording-' + new Date().toISOString().split('T')[0] + '.webm')">Upload to Drive</button>
+  <button onclick="submitToClassroom(document.getElementById('downloadBtn').dataset.blob, getFilename())">Submit to Classroom</button>
+  <button onclick="uploadToDrive(document.getElementById('downloadBtn').dataset.blob, getFilename())">Upload to Drive</button>
 </div>
 
 <script>
   const audio = document.getElementById('backingTrack');
   const customInput = document.getElementById('customUrlInput');
   const error = document.getElementById('errorMsg');
+  let mediaRecorder, audioChunks = [];
 
   function handleTrackChange(value) {
     error.textContent = '';
@@ -139,10 +141,10 @@
       audio.src = '';
     } else {
       customInput.style.display = 'none';
-      const match = value.match(/\/d\/([^/]+)(?:\/|$)/);
+      const match = value.match(/\/d\/([^/]+)/);
       if (match) {
         const fileId = match[1];
-        audio.src = `https://drive.google.com/uc?export=download&id=${fileId}`;
+        fetchAndPlay(fileId);
       } else {
         audio.src = '';
         console.error('Invalid Google Drive link');
@@ -159,25 +161,50 @@
     }
     const fileId = match[1];
     error.textContent = '';
-    audio.src = `https://drive.google.com/uc?export=download&id=${fileId}`;
+    fetchAndPlay(fileId);
   }
 
-  let mediaRecorder, recordedChunks = [];
-  async function startRecording() {
-    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-    mediaRecorder = new MediaRecorder(stream);
-    recordedChunks = [];
-    mediaRecorder.ondataavailable = e => recordedChunks.push(e.data);
-    mediaRecorder.onstop = () => {
-      const blob = new Blob(recordedChunks, { type: 'audio/webm' });
-      document.getElementById('recordedAudio').src = URL.createObjectURL(blob);
-      document.getElementById('downloadBtn').dataset.blob = blob;
-    };
-    mediaRecorder.start();
+  function fetchAndPlay(fileId) {
+    fetch(`https://docs.google.com/uc?export=download&id=${fileId}`)
+      .then(res => res.blob())
+      .then(blob => {
+        const url = URL.createObjectURL(blob);
+        audio.src = url;
+        audio.load();
+      })
+      .catch(err => {
+        console.error('Error loading audio:', err);
+        error.textContent = 'Failed to load audio from Google Drive.';
+      });
+  }
+
+  function startRecording() {
+    navigator.mediaDevices.getUserMedia({ audio: true }).then(stream => {
+      audio.play();
+      mediaRecorder = new MediaRecorder(stream);
+      audioChunks = [];
+      mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
+      mediaRecorder.onstop = () => {
+        const blob = new Blob(audioChunks, { type: 'audio/webm' });
+        const url = URL.createObjectURL(blob);
+        const recorded = document.getElementById('recordedAudio');
+        recorded.src = url;
+        document.getElementById('downloadBtn').dataset.blob = blob;
+      };
+      mediaRecorder.start();
+    });
   }
 
   function stopRecording() {
-    mediaRecorder?.stop();
+    if (mediaRecorder) {
+      mediaRecorder.stop();
+    }
+  }
+
+  function getFilename() {
+    const input = document.getElementById('filenameInput').value;
+    const fallback = 'recording-' + new Date().toISOString().split('T')[0] + '.webm';
+    return input ? input : fallback;
   }
 
   function downloadRecording() {
@@ -185,113 +212,9 @@
     if (!blob) return;
     const a = document.createElement('a');
     a.href = URL.createObjectURL(blob);
-    a.download = `recording-${new Date().toISOString().split('T')[0]}.webm`;
+    a.download = getFilename();
     a.click();
   }
-
-  // Neon animation
-  const canvas = document.getElementById('neonCanvas');
-  const ctx = canvas.getContext('2d');
-  let hue = 0, speed = 1, animOn = true;
-
-  function drawNeon() {
-    if (!animOn) return;
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    ctx.beginPath();
-    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
-    ctx.lineWidth = 4;
-    ctx.moveTo(20, 20);
-    ctx.lineTo(380, 20);
-    ctx.lineTo(380, 130);
-    ctx.lineTo(20, 130);
-    ctx.lineTo(20, 20);
-    ctx.stroke();
-    hue = (hue + speed) % 360;
-    requestAnimationFrame(drawNeon);
-  }
-
-  drawNeon();
-
-  function toggleAnimation() {
-    animOn = !animOn;
-    if (animOn) drawNeon();
-  }
-
-  function cycleSpeed() {
-    speed = speed === 0 ? 1 : speed === 1 ? 3 : speed === 3 ? 0 : 1;
-  }
-
-  function changeColor(color) {
-    hue = parseInt(color.replace('#', ''), 16) % 360;
-  }
 </script>
-
-<!-- Google APIs -->
-<script src="https://apis.google.com/js/api.js"></script>
-<script>
-  const CLIENT_ID = '898010171923-45uc2mbusq1r3p845tl0au0h95lc9r7s.apps.googleusercontent.com';
-  const API_KEY = 'AIzaSyBsr1jRZElMibwMiRMek8Z3d204-7uF254';
-  const DISCOVERY_DOCS = [
-    'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest',
-    'https://classroom.googleapis.com/$discovery/rest?version=v1'
-  ];
-  const SCOPES = 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/classroom.coursework.students.readonly https://www.googleapis.com/auth/classroom.courses.readonly';
-
-  function handleClientLoad() {
-    gapi.load('client:auth2', initClient);
-  }
-
-  function initClient() {
-    gapi.client.init({
-      apiKey: API_KEY,
-      clientId: CLIENT_ID,
-      discoveryDocs: DISCOVERY_DOCS,
-      scope: SCOPES
-    }).then(() => {
-      const isSignedIn = gapi.auth2.getAuthInstance().isSignedIn.get();
-      updateSigninStatus(isSignedIn);
-      gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
-    });
-  }
-
-  function updateSigninStatus(isSignedIn) {
-    if (isSignedIn) {
-      console.log('Signed in');
-    } else {
-      gapi.auth2.getAuthInstance().signIn();
-    }
-  }
-
-  function uploadToDrive(blob, filename) {
-    const file = new Blob([blob], { type: blob.type });
-    const metadata = {
-      name: filename,
-      mimeType: blob.type
-    };
-
-    const accessToken = gapi.auth.getToken().access_token;
-    const form = new FormData();
-    form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-    form.append('file', file);
-
-    fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id', {
-      method: 'POST',
-      headers: new Headers({ 'Authorization': 'Bearer ' + accessToken }),
-      body: form
-    }).then(res => res.json()).then(val => {
-      alert('Uploaded to Google Drive: File ID ' + val.id);
-    });
-  }
-
-  function submitToClassroom(blob, filename) {
-    gapi.client.classroom.courses.list().then(response => {
-      const courses = response.result.courses || [];
-      const courseId = prompt('Enter Course ID to submit to:');
-      if (!courseId) return;
-      uploadToDrive(blob, filename); // Can extend to attach to coursework later
-    });
-  }
-</script>
-<script async defer onload="handleClientLoad()"></script>
 </body>
 </html>
